[workspace]
resolver = "2"
members = [
    "packages/*"
]

[workspace.dependencies]
tokio = "1.28.1"
thiserror = "1.0.40"
futures-util = "0.3.28"
tracing = "0.1.37"
serde = "1.0"
serde_json = "1.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "8ae4e28" }
iced_graphics = { git = "https://github.com/iced-rs/iced.git", rev = "8ae4e28" }
tracing-subscriber = "0.3.17"
mimalloc = "0.1.37"
fixed-map = "0.9.2"
nix = "0.26.2"
