# Dev profile with pretty good perf so the emulator will reflect release performance
[profile.dev]
opt-level = 3
lto = false
debug-assertions = true
incremental = true

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
lto = "fat"

[workspace]
resolver = "2"
members = [
    "packages/*"
]

[workspace.dependencies]
tokio = "1.28"
thiserror = "1.0"
futures-util = "0.3"
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
once_cell = "1.17"
parking_lot = "0.12"
iced = "0.12"
iced_runtime = "0.12"
tracing-subscriber = "0.3"
mimalloc = "0.1"
fixed-map = "0.9"
nix = "0.28"
